0.0.4b

- Endianness fixes: now the packets can be sent between two machines with
  different endianness.
  
- All the the packet are now sent without any alignment.

- The free_nodes struct has been optimised: to keep the list of free nodes it
  uses single bits instead of single bytes, this means that the list is now of
  32 bytes instead of 256.

- The bug in the load_rh_cache code is now fixed.
  
- The installation path of the man page is now fixed.


0.0.3b
- The ANDNA code, with its DNS wrapper, is completed and tested.
	
- The Netsukuku code was cleaned. Now it's ready to be an API.

- The Italian to English translation of the document is finished.

0.0.2b
- NetsukukuD goes beta!

0.0.1a
- NetsukukuD compiles, at least.

0.0.0a
- The void and its nulliness filled the existence.