@@ -1,10 +1,13 @@
 		[HIGH PRIORITY] 
 
+- Strange anomalies added in the CVS version to verify: 
+	- ANDNA not always working: it doesn't find the counter
+	  node.
+	- QSPN: sometimes it gives: "connection refused".
+
 - DNS wrapper: ip -> hostnames
 
 - The QSPN has to remove the died nodes after QSPN_WAIT*2 seconds.
-
-- Use the multipath to use more than one route to reach a node.
 
 - multi network interface support
 
