@@ -39,5 +39,6 @@ int rand_range(int, int);
 void xsrand(void);
 void strip_char(char *string, char char_to_strip);
 char *last_token(char *string, char tok);
+int find_int(int x, int *ia, int nmemb);
 int is_bufzero(char *a, int sz);
 void do_nothing(void);
